<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF4F9"
    android:padding="20dp"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/title_addproduct"
            android:textColor="#C2185B"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_cute_edittext"
            android:hint="@string/title_productcode"
            android:padding="14dp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_cute_edittext"
            android:hint="@string/title_pdname"
            android:padding="14dp" />

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_cute_edittext"
            android:hint="@string/title_price"
            android:inputType="numberDecimal"
            android:padding="14dp" />

        <EditText
            android:id="@+id/edtImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_cute_edittext"
            android:hint="@string/title_image"
            android:padding="14dp" />

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_cute_button"
            android:padding="12dp"
            android:text="@string/title_btnaddproduct"
            android:textColor="#E91E63"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
